[package]
name = "eagle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0"
sysinfo = "0.30.12"
clap = {version="4.2.7",features=["derive"]}
chrono= "0.4.38"
byte-unit= "4.0.19"
sqlx = {version = "0.7", features = ["sqlite", "tls-rustls","runtime-tokio"] }
openssl = { version = "0.10.57", features = ["vendored"] }
